--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <iframe src="https://vk.com/video_ext.php?oid=-562082&id=137984094&hash=94974ab2a15c3331" width="640" height="360" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </main>
     <footer>
-      <a class="social" href=""><img src="https://learn.algoritmika.org/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href="page2.html"><img src="https://learn.algoritmika.org/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
     </footer>
   </body>
 </html>
