--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My Sites</title>
-    <link rel="stylesheet" href="style2.css"/>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
