--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </main>
     <footer>
       <a class="social" href="page2.html"><img src="https://learn.algoritmika.org/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href="page3.html">Сайт Дани</a>
+      
+      <p></p><a class="social" href="page3.html">Сайт Дани</a></p>
 
     </footer>
   </body>
